# job-ace

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  example_resume_blocks.xml  example_resume_blocks.yaml  pyproject.toml  roadmap.md  setup.sh  start.sh
backend/: config.py  main.py
backend/api/: app.py
backend/browser/: analyzer.py  capture.py  prefill.py
backend/db/: session.py
backend/models/: models.py  resume_document.py  schemas.py
backend/services/: __init__.py  analysis.py  artifacts.py  capture.py  compliance.py  export.py  intake.py  llm.py  prefill.py  resume_converter.py  resume_normalizer.py  submission.py  tailor.py
backend/templates/resume/classic/: meta.json  style.css  template.html
cli/: app.py  common.py
docs/: capture_workflow.md  job_analysis_plan.md
docs/schemas/: form_schema.json  resume_blocks.xsd  worksheet_answers.json
frontend/: index.html
frontend/static/css/: styles.css
frontend/static/js/: app.js
specs/: job-inspection-view.md  resume-object-model.md
tests/: conftest.py  test_analysis_service.py  test_api.py  test_artifacts.py  test_compliance.py  test_export.py  test_intake_service.py  test_llm_factory.py  test_llm_stub.py  test_models.py  test_normalizer.py  test_prefill_planner.py  test_resume_converter.py  test_schemas.py  test_submission.py  test_tailor_service.py
tests/e2e/: conftest.py  test_ui.py
